grass (6.4.2-1) unstable; urgency=low

  * Packaged new upstream version.
  * Reorganize binary packages, new: grass-core, grass-gui, grass-dev-doc.
  * Patch g.extension.sh to check for the needed grass-dev package.
  * Remove outdated cruft from debian/fixscripts.sh and debian/rules.
  * Use system's copy of jquery.js in the Programmers' Manual.
  * libmysqlclient-dev replaces libmysqlclient15-dev.
    (closes: #650361)
  * Use xdg-open for GRASS_HTML_BROWSER when available.
    (closes: #615667)
  * Policy bumped to 3.9.3, using metapackages archive section for 'grass'.

 -- M. Hamish Bowman <hamish_b@yahoo.com>  Sat, 25 Feb 2012 22:49:50 +1300

grass (6.4.1-2) unstable; urgency=low

  [ Hamish Bowman ]
  * Desktop icon cleanup.
  * Recommend wx; suggest gs, python-imaging, python-rpy2.
  * Remove more obsolete swig references.
  * grass-dev: further support for building add-ons.

  [ Francesco Paolo Lovergine ]
  * Now reset debian/rules to use wx-config current alternative.
    (closes: #655799)
  * Now added python-support to manage compiled python modules.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Thu, 19 Jan 2012 14:04:52 +0100

grass (6.4.1-1) unstable; urgency=low

  * New upstream version.
  * Now build-dep on libjpeg-dev and current libreadline6-dev.
  * Removed patch swig: obsolete.
  * Policy bumped to 3.9.2, without changes.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Wed, 13 Apr 2011 17:08:41 +0200

grass (6.4.0-2) unstable; urgency=low

  * Ready for unstable.
  * Removed pre-release patches inserted in the squeeze latest upload.

  * Merged from 6.4.0-1 in experimental:
      - Added missing docs used by GUIs: AUTHORS, contributors CSV files,
        COPYING and a symlink to GPL-2 license in /usr/share/common-licenses.
        Those files need to be symlinked in GISBASE to be found at run-time.
        Thanks AlanB and Hamish for pointing the problem.
        (closes: #594492)
      - New upstream final release 6.4.0.