@@ -25,6 +25,8 @@ Build-depends:
   libreadline-dev | libreadline6-dev,
   libsqlite3-dev,
   libxmu-dev,
+#install optipng if compressing the PNG images in the programmers' manual
+#  optipng,
   python-dev (>= 2.5), python-support (>= 0.7.1),
   python-wxgtk2.8, libwxgtk2.8-dev,
   tcl-dev (>= 8.5), tk-dev (>= 8.5),
