@@ -9,5 +9,5 @@ Abstract: Geographic Resources Analysis Support System, commonly referred
 Section: Science/Geoscience
 
 Format: HTML
-Index: /usr/share/doc/grass-dev-doc/programming-manual/html/gis/html/index.html
-Files: /usr/share/doc/grass-dev-doc/programming-manual/html/db/html/*.html /usr/share/doc/grass-dev-doc/programming-manual/html/gis/html/*.html /usr/share/doc/grass-dev-doc/programming-manual/html/vector/html/*.html
+Index: /usr/share/doc/grass-dev-doc/programming-manual/html/index.html
+Files: /usr/share/doc/grass-dev-doc/programming-manual/html/*.html
