@@ -1,14 +1,1 @@
-usr/share/javascript/jquery/jquery.js usr/share/doc/grass-dev-doc/programming-manual/html/db/html/jquery.js
-usr/share/javascript/jquery/jquery.js usr/share/doc/grass-dev-doc/programming-manual/html/g3d/html/jquery.js
-usr/share/javascript/jquery/jquery.js usr/share/doc/grass-dev-doc/programming-manual/html/gis/html/jquery.js
-usr/share/javascript/jquery/jquery.js usr/share/doc/grass-dev-doc/programming-manual/html/gmath/html/jquery.js
-usr/share/javascript/jquery/jquery.js usr/share/doc/grass-dev-doc/programming-manual/html/gpde/html/jquery.js
-usr/share/javascript/jquery/jquery.js usr/share/doc/grass-dev-doc/programming-manual/html/gui/wxpython/html/jquery.js
-usr/share/javascript/jquery/jquery.js usr/share/doc/grass-dev-doc/programming-manual/html/html/jquery.js
-usr/share/javascript/jquery/jquery.js usr/share/doc/grass-dev-doc/programming-manual/html/ogsf/html/jquery.js
-usr/share/javascript/jquery/jquery.js usr/share/doc/grass-dev-doc/programming-manual/html/proj/html/jquery.js
-usr/share/javascript/jquery/jquery.js usr/share/doc/grass-dev-doc/programming-manual/html/python/html/jquery.js
-usr/share/javascript/jquery/jquery.js usr/share/doc/grass-dev-doc/programming-manual/html/rfc/html/jquery.js
-usr/share/javascript/jquery/jquery.js usr/share/doc/grass-dev-doc/programming-manual/html/segment/html/jquery.js
-usr/share/javascript/jquery/jquery.js usr/share/doc/grass-dev-doc/programming-manual/html/vector/html/jquery.js
-usr/share/javascript/jquery/jquery.js usr/share/doc/grass-dev-doc/programming-manual/html/vector/dglib/html/jquery.js
+usr/share/javascript/jquery/jquery.js usr/share/doc/grass-dev-doc/programming-manual/html/jquery.js
