@@ -4,6 +4,7 @@ grass (6.4.2-1) unstable; urgency=low
   * Reorganize binary packages, new: grass-core, grass-gui, grass-dev-doc.
   * Patch g.extension.sh to check for the needed grass-dev package.
   * Remove outdated cruft from debian/fixscripts.sh and debian/rules.
+  * Install the full Programmers' Manual.
   * Use system's copy of jquery.js in the Programmers' Manual.
   * libmysqlclient-dev replaces libmysqlclient15-dev.
     (closes: #650361)
